--- a/app/assets/stylesheets/products.css.scss
+++ b/app/assets/stylesheets/products.css.scss
@@ -1,56 +1,51 @@
-body {
-  background-color: #fff;
-  color: #333;
-  font-family: verdana, arial, helvetica, sans-serif;
-  font-size: 13px;
-  line-height: 18px; }
+// Place all the styles related to the Products controller here.
+// They will automatically be included in application.css.
+// You can use Sass (SCSS) here: http://sass-lang.com/
+/* START_HIGHLIGHT */
+.products {
+  table {
+    border-collapse: collapse;
+  }
 
-p, ol, ul, td {
-  font-family: verdana, arial, helvetica, sans-serif;
-  font-size: 13px;
-  line-height: 18px; }
+  table tr td {
+    padding: 5px;
+    vertical-align: top;
+  }
 
-pre {
-  background-color: #eee;
-  padding: 10px;
-  font-size: 11px; }
+  .list_image {
+    width:  60px;
+    height: 70px;
+  }
 
-a {
-  color: #000;
-  &:visited {
-    color: #666; }
-  &:hover {
-    color: #fff;
-    background-color: #000; } }
+  .list_description {
+    width: 60%;
 
-div {
-  &.field, &.actions {
-    margin-bottom: 10px; } }
+    dl {
+      margin: 0;
+    }
 
-#notice {
-  color: green; }
+    dt {
+      color:        #244;
+      font-weight:  bold;
+      font-size:    larger;
+    }
 
-.field_with_errors {
-  padding: 2px;
-  background-color: red;
-  display: table; }
+    dd {
+      margin: 0;
+    }
+  }
 
-#error_explanation {
-  width: 450px;
-  border: 2px solid red;
-  padding: 7px;
-  padding-bottom: 0;
-  margin-bottom: 20px;
-  background-color: #f0f0f0;
-  h2 {
-    text-align: left;
-    font-weight: bold;
-    padding: 5px 5px 5px 15px;
-    font-size: 12px;
-    margin: -7px;
-    margin-bottom: 0px;
-    background-color: #c00;
-    color: #fff; }
-  ul li {
-    font-size: 12px;
-    list-style: square; } }
+  .list_actions {
+    font-size:    x-small;
+    text-align:   right;
+    padding-left: 1em;
+  }
+
+  .list_line_even {
+    background:   #e0f8f8;
+  }
+  .list_line_odd {
+    background:   #f8b0f8;
+  }
+}
+/* END_HIGHLIGHT */
